Add blogs api & fix ping
